<resources>
    <string name="app_name">RollAndroidDB</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="add_personTitle">Add Person</string>
    <string name="remove_personTitle">Remove Person</string>
    <string name="refreshTitle">Refresh</string>
    <string name="clear_dbTitle">Clear DB</string>
    <string name="externalTitle">External</string>
    <string name="create_dbTitle">Create DB</string>
    <string name="deleteTitle">Delete DB</string>
    <string name="exitTitle">Exit</string>
    <string name="sql_dbTitle">SQL DB</string>
    <string name="enter_nameHint">Enter Name</string>
    <string name="enter_emailHint">Enter Email</string>
    <string name="enter_phoneHint">Enter Phone</string>
    <string name="enter_idHint">Enter ID</string>
</resources>
